syntax = "proto3";
option java_package = "grpc";
import "google/protobuf/empty.proto";

service MediaMetadata {
  rpc newMediaMetadata(CreateNewMediaMetadataRequest) returns (MediaMetadataResponse) {};
  rpc updateMediaMetadata(UpdateMediaRequest) returns(MediaMetadataResponse) {};
  rpc getMediaMetadata(GetMediaMetadataRequest) returns(MediaMetadataResponse) {};
  rpc getAllMediaMetadata(google.protobuf.Empty) returns(MediaMetadataResponseRepeated) {};
  rpc getProjectMediasMetadata(GetProjectMediasRequest) returns(MediaMetadataResponseRepeated) {};
  rpc getOneProjectMediasMetadata(GetOneProjectMedia) returns(MediaMetadataResponse) {};

  rpc getLiveMedias(google.protobuf.Empty) returns(MediaMetadataResponseRepeated){}
  rpc getMediasInProgress(google.protobuf.Empty) returns(MediaMetadataResponseRepeated){}

  rpc deleteMedia(GetMediaMetadataRequest) returns(StatusResponse1);
}

message CreateNewMediaMetadataRequest {
  string name = 1;
  string siteName = 2;
  int32 length = 3;
  int32 status = 4;
  string thumbnail = 5;
  int32 projectId = 6;
  string awsBucketWholeMedia = 7;
  string awsStorageNameWholeMedia = 8;
}

message MediaMetadataResponseRepeated {
  repeated MediaMetadataResponse data = 1;
}

message MediaMetadataResponse {
  int32  mediaId = 1;
  string name = 2;
  string siteName = 3;
  int32 length = 4;
  int32 status = 5;
  string thumbnail = 6;
  int32 projectId = 7;
  string awsBucketWholeMedia = 8;
  string awsStorageNameWholeMedia = 9;
  repeated string keywords = 10;
  int64 createdAt = 11;
  int64 updatedAt = 12;
}


message UpdateMediaRequest {
  int32  mediaId = 1;
  string name = 2;
  string siteName = 3;
  int32 length = 4;
  int32 status = 5;
  string thumbnail = 6;
  int32 projectId = 7;
  string awsBucketWholeMedia = 8;
  string awsStorageNameWholeMedia = 9;
  int64 createdAt = 11;
}

message GetMediaMetadataRequest {
  int32 mediaId = 1;
}

message GetProjectMediasRequest {
  int32 projectId = 1;
}

message GetOneProjectMedia {
  int32 mediaId = 1;
  int32 projectId = 2;
}

message StatusResponse1 {
  string message = 1;
  int32 status = 2;
  bool data = 3;
}